--- a/components/intro.css
+++ b/components/intro.css
@@ -1,16 +1,65 @@
 #intro {
-    position: relative; /* for scroll-down */
+    position: relative;
+    /* for scroll-down */
+}
+
+#intro>.container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 2px var(--gap);
+    align-items: center;
 }
 
 #intro-h1 {
     margin-bottom: 0;
 }
+
+#intro-h1 .title--lg {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+/* 
 #intro-h2 {
     margin-top: 0;
     margin-bottom: 40px;
     overflow-wrap: break-word;
-}
+    grid-area: 2/2;
+} */
 
 #intro p {
     margin-block: 0;
+}
+
+.intro-caption {
+    color: var(--black)
+}
+
+.intro-caption#caption-1 {
+    grid-row: 2;
+}
+
+.intro-caption#caption-2 {
+    grid-row: 3;
+}
+
+.intro-hero {
+    display: grid;
+    grid-template-areas: "body";
+    padding: 20px;
+    justify-content: center;
+}
+
+img.circle-img {
+    border: transparent 8px solid;
+    border-radius: 50%;
+    grid-area: body;
+    width: 100%;
+    height: 100%;
+}
+
+.intro-hero>div {
+    border: white 3px solid;
+    border-radius: 50%;
+    grid-area: body
 }
