--- a/components/layouts.css
+++ b/components/layouts.css
@@ -1,6 +1,7 @@
 .layout-section {
-    padding-bottom: 200px;
     scroll-margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 100px;
 }
 
 .layout-section-title {
@@ -17,6 +18,7 @@
     .layout-section {
         padding-bottom: 100px;
     }
+
     .layout-grid-half {
         grid-template-columns: 1fr;
     }
