--- a/components/typography.css
+++ b/components/typography.css
@@ -1,8 +1,11 @@
 /* Titles */
 .title--lg {
-    font-size: 5.6rem;
-    font-weight: bold;
+    font-size: 2.7rem;
     line-height: 1.05;
+    font-family: 'Roboto Condensed', 'sans-serif';
+    font-weight: 400;
+    margin-top: 0px;
+    margin-bottom: 40px;
 }
 
 .title {
@@ -21,9 +24,9 @@
 
 /* Texts */
 .text--xl {
-    font-size: 1.75rem;
+    font-size: 1.4rem;
     font-weight: 300;
-    line-height: 1.77;
+    line-height: 1.1;
 }
 
 .text--lg {
