--- a/components/base.css
+++ b/components/base.css
@@ -1,19 +1,22 @@
 :root {
-    /* --primary: #f2d544; */
-    --background-color: #F0966D;
-    --dark-blue: #130c24;
+    --primary: #ff9064;
     --black: #232020;
+    --white: white;
+    --dark-blue: #130c24;
     --gray: #4c4c4c;
     --beige: #f5f5f1;
+    --text-color: var(--black);
     --gap: 40px;
 
     /* theme dependent variables */
-    --text-color: white;
+    --text-color: var(--black);
     --light-icon: white;
     --gray-dark: #666666;
     --gray-light: #bdbdbd;
     --dark-icon: var(--black);
     --anchor-color: var(--primary);
+    --font-primary: 'Roboto Condensed', 'sans-serif';
+    --font-secondary: 'DM Sans', 'sans-serif';
 }
 
 * {
@@ -21,19 +24,8 @@
 }
 
 html {
-    background-color: var(--background-color);
     color: var(--text-color);
 }
-
-/* 
-html.light-theme {
-    background-color: var(--background-color);
-    --text-color: var(--black);
-    --gray-light: var(--gray-dark);
-    --light-icon: var(--black);
-    --dark-icon: white;
-    --anchor-color: var(--black);
-} */
 
 @media (prefers-reduced-motion: no-preference) {
     html {
@@ -43,8 +35,7 @@ html.light-theme {
 
 body {
     margin: 0;
-    /* font-family: "Poppins", sans-serif; */
-    font-family: "DM Sans", sans-serif;
+    font-family: var(--font-secondary);
     /* font-optical-sizing: auto; */
     /* font-weight: <weight>; */
     /* font-style: normal; */
