--- a/components/buttons.css
+++ b/components/buttons.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
     display: inline-block;
     cursor: pointer;
-    font-size: 0.88rem;
-    line-height: 1.5;
-    letter-spacing: 2px;
-    font-weight: 600;
-    text-transform: uppercase;
     transition: translate 180ms, opacity 180ms;
     opacity: 0.8;
+    line-height: 1.5;
+    letter-spacing: 2px;
+    font-size: 0.88rem;
+    font-weight: 400;
+    font-family: var(--font-primary);
 }
 
 .btn:hover {
@@ -22,7 +22,7 @@
 }
 
 .btn--nav {
-    color: var(--text-color);
+    color: var(--white);
     padding: 12px;
 }
 
