--- a/components/footer.css
+++ b/components/footer.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-block: 20px;
 }
 
 .footer .side {
@@ -16,11 +17,9 @@
     gap: 16px;
 }
 
-.footer-name {
-    margin-bottom: 0;
-}
-.footer-rights {
-    margin-top: 0;
+.footer-text {
+    /* margin-top: 0; */
+    color: var(--white);
 }
 
 @media (max-width: 37.5rem) {
