--- a/components/intro.css
+++ b/components/intro.css
@@ -1,6 +1,11 @@
 #intro {
+    background-color: var(--primary);
     position: relative;
+    color: var(--white);
+
     /* for scroll-down */
+    margin-top: 0px;
+    padding-block: 85px 180px;
 }
 
 #intro>.container {
@@ -11,7 +16,7 @@
 }
 
 #intro-h1 {
-    margin-bottom: 0;
+    margin-bottom: 40px;
 }
 
 #intro-h1 .title--lg {
@@ -19,47 +24,30 @@
     margin-bottom: 0px;
 }
 
-/* 
-#intro-h2 {
-    margin-top: 0;
-    margin-bottom: 40px;
-    overflow-wrap: break-word;
-    grid-area: 2/2;
-} */
-
 #intro p {
     margin-block: 0;
 }
 
 .intro-caption {
-    color: var(--black)
-}
-
-.intro-caption#caption-1 {
-    grid-row: 2;
-}
-
-.intro-caption#caption-2 {
-    grid-row: 3;
+    color: var(--black);
 }
 
 .intro-hero {
     display: grid;
     grid-template-areas: "body";
-    padding: 20px;
     justify-content: center;
 }
 
-img.circle-img {
-    border: transparent 8px solid;
-    border-radius: 50%;
+.intro-hero>div {
     grid-area: body;
-    width: 100%;
-    height: 100%;
+    border: var(--white) 3px solid;
+    border-radius: 50%;
 }
 
-.intro-hero>div {
-    border: white 3px solid;
+img.circle-img {
+    grid-area: body;
+    border: transparent 8px solid;
     border-radius: 50%;
-    grid-area: body
+    width: 100%;
+    height: 100%;
 }
