--- a/components/typography.css
+++ b/components/typography.css
@@ -2,7 +2,7 @@
 .title--lg {
     font-size: 2.7rem;
     line-height: 1.05;
-    font-family: 'Roboto Condensed', 'sans-serif';
+    font-family: var(--font-primary);
     font-weight: 400;
     margin-top: 0px;
     margin-bottom: 40px;
@@ -15,11 +15,10 @@
 }
 
 .title--sm {
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.06;
+    font-size: 2.5rem;
+    font-weight: 400;
+    line-height: 1.2;
     letter-spacing: 0.1rem;
-    text-transform: uppercase;
 }
 
 /* Texts */
@@ -48,7 +47,7 @@
 }
 
 .text--sm {
-    font-size: 1rem;
-    font-weight: normal;
-    line-height: 1.77;
+    font-size: .85rem;
+    font-weight: 300;
+    line-height: 2;
 }
