--- a/components/container.css
+++ b/components/container.css
@@ -1,5 +1,18 @@
 .container {
     max-width: 1160px;
-    padding-inline: 40px;
+    padding-inline: 30px;
     margin-inline: auto;
+}
+
+
+@media(width <=991px) {
+    .container {
+        max-width: 750px;
+    }
+}
+
+@media (width <=767px) {
+    .container {
+        max-width: 570px;
+    }
 }
