--- a/components/typography.css
+++ b/components/typography.css
@@ -1,11 +1,11 @@
 /* Titles */
 .title--lg {
-    font-size: 2.7rem;
-    line-height: 1.05;
+    font-size: 3.1rem;
+    line-height: 1.1;
     font-family: var(--font-primary);
     font-weight: 400;
     margin-top: 0px;
-    margin-bottom: 40px;
+    /* margin-bottom: 15px; */
 }
 
 .title {
@@ -23,7 +23,7 @@
 
 /* Texts */
 .text--xl {
-    font-size: 1.4rem;
+    font-size: 2rem;
     font-weight: 300;
     line-height: 1.1;
 }
@@ -50,4 +50,19 @@
     font-size: .85rem;
     font-weight: 300;
     line-height: 2;
+}
+
+@media(width <=991px) {
+    .title--lg {
+        font-size: 2.5rem;
+        line-height: 1;
+        font-weight: 300;
+
+    }
+
+    .text--xl {
+        font-size: 1.5rem;
+        font-weight: 300;
+        line-height: 1;
+    }
 }
