--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @import "components/typography.css";
 @import "components/layouts.css";
 @import "components/buttons.css";
+@import "components/images.css";
 @import "components/tags.css";
 @import "components/nav.css";
 @import "components/portfolio.css";
@@ -13,4 +14,5 @@
 @import "components/scroll-down.css";
 @import "components/toggle-theme.css";
 @import "components/intro.css";
+@import "components/contact.css";
 @import "components/hire.css";
